# ebible-mt

./: .gitignore  project-brief-transformer-big-scaleup.md  pyproject.toml  spec.md  todo.md
configs/experiments/: ie_big.yaml  ie_big_shareable.yaml  smoke_big.yaml
experiments/: ie-big-results.md  ie-big-shareable-results.md
src/samileides/: fetch.py  train.py
tests/: test_config.py
