[project]
name = "samileides"
version = "0.2.0"
description = "Transformer-big scale-up of the closed-text Bible machine-translation experiments (continuation of m2m_bible_mt)"
readme = "spec.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "pyarrow>=16",
    "huggingface-hub>=0.30",
    "fsspec>=2024.6",
    "pyyaml>=6",
    "sentencepiece>=0.2",
    "sacrebleu>=2.4",
    "protobuf>=7.35.1",
]

[dependency-groups]
dev = [
    "pytest>=8",
]
# Training stack. A default group (not an extra) so a plain `uv sync` installs
# it — the ClearML agent runs exactly that on the workers, and an extra would
# be silently skipped there (the smoke_big remote run failed on missing torch).
# CPU-only data-prep boxes can opt out with `uv sync --no-group train`.
train = [
    "torch>=2.4",
    "transformers>=4.44",
    "accelerate>=0.33",
    "clearml>=1.16",
    "matplotlib>=3.9",
]

[tool.uv]
default-groups = ["dev", "train"]

# The jobs_backlog workers report agent.cuda_version = 124 (driver family
# 12.x); PyPI's current torch ships CUDA 13 wheels, which that driver cannot
# load ("Your setup doesn't support bf16/gpu"). Pin torch to the cu126 wheel
# index — 12.x wheels run on any 12.x driver, and on the newer local box too.
[tool.uv.sources]
torch = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/samileides"]

[tool.pytest.ini_options]
addopts = "-q -m 'not integration'"
testpaths = ["tests"]
markers = [
    "integration: touches the Hugging Face Hub over the network",
]
