[project]
name = "samileides"
version = "0.2.0"
description = "Transformer-big scale-up of the closed-text Bible machine-translation experiments (continuation of m2m_bible_mt)"
readme = "spec.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "pyarrow>=16",
    "huggingface-hub>=0.30",
    "fsspec>=2024.6",
    "pyyaml>=6",
    "sentencepiece>=0.2",
    "sacrebleu>=2.4",
    "protobuf>=7.35.1",
]

[dependency-groups]
dev = [
    "pytest>=8",
]
# Training stack. A default group (not an extra) so the ClearML agents install
# it — their poetry env setup skips extras (the first remote smoke_big failed on
# missing torch). CPU-only data-prep boxes can opt out with `--no-group train`.
# torch is capped below 2.7: the jobs_backlog workers' driver supports exactly
# CUDA 12.4 and torch 2.6.0 is the last PyPI release built on cu124 — newer
# wheels fail CUDA init there ("driver too old (found version 12040)"). The
# agents use poetry, which ignores [tool.uv] index pins, so the constraint must
# live here in the version bound.
train = [
    "torch>=2.4,<2.7",
    "transformers>=4.44",
    "accelerate>=0.33",
    "clearml>=1.16",
    "matplotlib>=3.9",
]

[tool.uv]
default-groups = ["dev", "train"]

# The jobs_backlog workers have a driver supporting exactly CUDA 12.4
# (torch reports "driver too old (found version 12040)" for both cu130 and
# cu126 wheels). Pin torch to the cu124 wheel index — its newest build is
# torch 2.6.0, which the newer local box also runs fine.
[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/samileides"]

[tool.pytest.ini_options]
addopts = "-q -m 'not integration'"
testpaths = ["tests"]
markers = [
    "integration: touches the Hugging Face Hub over the network",
]
